Fix HTML formatting and update script source

--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 	<div id="notif" class="notif"></div>
 
 </body>
-<script src="1.1.js"></script>
+<script src="script.js"></script>
 
 </html>
+
